data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_869.wast
;; 10. **Incorrect Forward Jumps to Non-Terminating Blocks:**    - Test forward branches that directly transition to non-terminating blocks or `if` instructions incorrectly.    - **Constraint Checked:** Correct end of the `block` or `if` targets ensuring proper branching.    - **CFG Impact:** Incorrect forward branches lead to CFG paths that might form invalid routes and unreachable states.

(assert_invalid
  (module
    (func
      (block (result i32)
        (br 1) ;; Incorrect forward jump to a non-terminating block
      )
      (i32.const 0) (drop)
    )
  )
  "type mismatch"
)